--- a/content/template_test.ipynb
+++ b/content/template_test.ipynb
@@ -5,7 +5,7 @@
    "id": "97ca97ae",
    "metadata": {},
    "source": [
-    "# 📊 Yield Curve Update — {{date}}"
+    "# 📊 Yield Curve Update"
    ]
   },
   {
